--- a/app/views/galeries/exhibitions/new.html.erb
+++ b/app/views/galeries/exhibitions/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :video %>
   <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
   <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.submit class: 'btn btn-light' %>
+  <%= f.submit 'Add', class: 'btn btn-light' %>
   <%end%>
 
 </div>
