--- a/app/views/galeries/new.html.erb
+++ b/app/views/galeries/new.html.erb
@@ -5,6 +5,6 @@
   <%= f.input :name %>
   <%= f.input :location %>
   <%= f.input :photo, as: :file %>
-  <%= f.submit class: 'btn btn-light'%>
+  <%= f.submit 'Add', class: 'btn btn-light'%>
   <%end%>
 </div>
