--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,16 +1,13 @@
 <div class="container">
   <div class="card text-center">
     <span><%= link_to  "Add Piece", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-light" %> |
-      <%= link_to  "Edit Exhibition", edit_exhibition_path(@exhibition) , :class => "btn btn-light" %></span>
+      <%= link_to  "Edit Exhibition", edit_exhibition_path(@exhibition) , :class => "btn btn-light" %> | <%= link_to  "Back", galery_path(@exhibition.galery) , :class => "btn btn-light" %></span>
   </div>
   <div class="row" style="margin-top:10px;">
     <div class="row">
       <div class="col-12 col-sm-6 col-md-5 col-lg-5">
-
-
-        <a href="#" class="artistname" title="Will Cotton">
-          <%= @exhibition.artist %></a><br>
         <br>
+        <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
         <span class="exhibition_title work_block_data_line_height">
           <%= @exhibition.name %> </span><br>
         <span class="date work_block_data_line_height">
@@ -21,15 +18,14 @@
         <br>
 
 
-        <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu  active", :title => "Selected works" %><br>
-        <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active", :title => "Press release" %><br>
-        <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active", :title => "Video" %><br>
+        <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
+        <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
+        <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Video" %><br>
 
 
         <br>
         <br>
-        <p>We invite you to experience our new online "Show room" for an immersive visit of this exhibition.</p>
-        <p><%= link_to "Go to the showroom", "#", :class => "btn btn-light" %></p>
+        <p>We invite you to experience our new online "<%= link_to "Show room", "#", class: "btn btn-light btn-sm"%>" for an immersive visit of this exhibition.</p>
 
       </div>
       <div class="col-12 col-sm-12 col-md-7 col-lg-7">
