--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:20px;">
   <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <% @galeries.each do |galery| %>
@@ -18,7 +18,7 @@
           <%end%>
           <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
           <div class="carousel-caption" style="color: black;">
-            <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-light" %>
+            <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
             <p><%= galery.location%></p>
           </div>
         </div>
