--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,21 +10,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Create a Gallery", new_galery_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
-         <span class= "nav-link dropdown-toggle" id= "navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your galleries </span>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <% current_user.galeries.each do |gallery| %>
-              <%= link_to gallery.name, gallery, class: "dropdown-item" %>
-            <% end %>
-          </div>
-        </li>
+      <li class="nav-item">
+        <%= link_to "Create a Gallery", new_galery_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your galleries </span>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <% current_user.galeries.each do |gallery| %>
+          <%= link_to gallery.name, gallery, class: "dropdown-item" %>
+          <% end %>
+        </div>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
+      <li class="nav-item">
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      </li>
       <% end %>
     </ul>
   </div>
