--- a/app/views/galeries/show.html.erb
+++ b/app/views/galeries/show.html.erb
@@ -6,7 +6,8 @@
       <h6><%= @galery.location %></h6>
     </div>
     <div class="card text-center">
-      <span><%= link_to  "New Exhibition", new_galery_exhibition_path(@galery) , :class => "btn btn-light" %> | <%= link_to "Edit Galery", edit_galery_path(@galery), :class => "btn btn-light"  %> | <%= link_to "Back", galeries_path, :class => "btn btn-light"  %> </span></div>
+      <% if user_signed_in?%>
+      <span><%= link_to  "New Exhibition", new_galery_exhibition_path(@galery) , :class => "btn btn-light" %><% if current_user.eql?(@galery.user)%> | <%= link_to "Edit Galery", edit_galery_path(@galery), :class => "btn btn-light"  %><%end%> |<%end%> <span><%= link_to "Back", galeries_path, :class => "btn btn-light"  %> </span></div>
 
     <div class="row" style="margin-top:10px;">
       <div class="col-12 col-lg-9">
