--- a/app/views/exhibitions/video.html.erb
+++ b/app/views/exhibitions/video.html.erb
@@ -1,35 +1,39 @@
 <div class="container">
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-5 col-lg-5">
-
-
-      <%= link_to  "#{@exhibition.artist}", "#" %><br>
-      <br>
-      <span class="exhibition_title work_block_data_line_height">
-        <%= @exhibition.name %> </span><br>
-      <span class="date work_block_data_line_height">
-        <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
-      <span class="date work_block_data_line_height">
-        <%= @exhibition.galery.location %> </span> <br>
-      <br>
-      <br>
-
-
-      <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu  active", :title => "Selected works" %><br>
-      <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active", :title => "Press release" %><br>
-      <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active", :title => "Video" %><br>
-
-      <br>
-      <br>
-      <p>We invite you to experience our new online "Show room" for an immersive visit of this exhibition.</p>
-      <p><%= link_to "Go to the showroom", "#", :class => "btn btn-light" %></p>
-
-    </div>
-    <div class="col-12 col-sm-12 col-md-7 col-lg-7">
-
-      <iframe width="560" height="315" src=<%=@exhibition.video %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> <br>
-      <br>
-    </div>
-
+  <div class="card text-center">
+    <% if user_signed_in? && current_user.eql?(@exhibition.galery.user) %>
+    <span><%= link_to  "Add Piece", new_exhibition_art_piece_path(@exhibition) , :class => "btn btn-light" %> |
+      <%= link_to  "Edit Exhibition", edit_exhibition_path(@exhibition) , :class => "btn btn-light" %></span> | <%end%><span><%= link_to  "Back", galery_path(@exhibition.galery) , :class => "btn btn-light" %></span>
   </div>
-</div>
+  <div class="row" style="margin-top:10px;">
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-5 col-lg-5">
+        <br>
+        <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
+        <span class="exhibition_title work_block_data_line_height">
+          <%= @exhibition.name %> </span><br>
+        <span class="date work_block_data_line_height">
+          <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
+        <span class="date work_block_data_line_height">
+          <%= @exhibition.galery.location %> </span> <br>
+        <br>
+        <br>
+
+
+        <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
+        <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
+        <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Video" %><br>
+
+
+        <br>
+        <br>
+        <p>We invite you to experience our new online "<%= link_to "Show room", "#", class: "btn btn-light btn-sm"%>" for an immersive visit of this exhibition.</p>
+
+      </div>
+      <div class="col-12 col-sm-12 col-md-7 col-lg-7">
+
+        <iframe style="margin-left:75px; margin-top:30px;" width="560" height="315" src=<%=@exhibition.video %> frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> <br>
+        <br>
+      </div>
+
+    </div>
+  </div>
