--- a/app/views/exhibitions/edit.html.erb
+++ b/app/views/exhibitions/edit.html.erb
@@ -1,13 +1,66 @@
-<div class="container">
+     <% content_for :meta_title, "Edit | #{@exhibition.name}" %>
+     <div class="navbar nav navbar-expand-sm navbar-light navbar-lewagon">
+       <div class="nav-item">
+         <ul class="navbar-nav ml-auto">
+           <li><%= link_to "Home", root_path, class: "nav-link", style: "text-decoration: none; color: gray;"   %></li>
+           <li> <%= link_to "Back", exhibition_path(@exhibition) , :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
+         </ul>
+       </div>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
 
-  <%= simple_form_for @exhibition do |f| %>
-  <h4> Edit Exhibition </h4>
-  <%= f.input :name %>
-  <%= f.input :artist %>
-  <%= f.input :video %>
-  <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.submit 'Edit', class: 'btn btn-light' %>
-  <%end%>
+       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <ul class="navbar-nav mr-auto">
+           <% if user_signed_in? %>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your galleries </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <% current_user.galeries.each do |gallery| %>
+               <%= link_to gallery.name, gallery, class: "dropdown-item" %>
+               <% end %>
+             </div>
+           </li>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your exhibitions </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <% current_user.galeries.each do |gallery| %>
+               <% gallery.exhibitions.each do |exhibition| %>
+               <% if current_user.eql?(exhibition.galery.user) %>
+               <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
+               <% end %>
+               <%end%>
+               <%end%>
+             </div>
+           </li>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Menu </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <%= link_to  "Back", exhibition_path(@exhibition) , :class => "dropdown-item" %>
+               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+               <% else %>
+               <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+               <% end %>
+             </div>
+           </li>
+         </ul>
+       </div>
+     </div>
 
-</div>
+
+
+     <div class="container">
+       <div class="card text-center">
+         <h4>Edit Exhibition</h4>
+       </div>
+       <%= simple_form_for @exhibition do |f| %>
+       <%= f.input :name %>
+       <%= f.input :artist %>
+       <%= f.input :video %>
+       <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+       <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+       <%= f.submit 'Edit', class: 'btn btn-light' %>
+       <%= link_to "Back", exhibition_path(@exhibition), class: 'btn btn-light' %>
+       <%end%>
+
+     </div>
