--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -1,36 +1,84 @@
-<div class="container" style="margin-top:20px;">
-  <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <% @galeries.each do |galery| %>
-      <% if galery.eql?(@galeries.first) %>
-      <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%> class="active"></li>
-      <% else %>
-      <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%>></li>
-      <%end%>
-      <%end%>
-    </ol>
-    <div class="carousel-inner">
-      <% @galeries.each do |galery| %>
-      <% if galery.eql?(@galeries.first)%>
-      <div class="carousel-item active">
-        <%else%>
-        <div class="carousel-item">
-          <%end%>
-          <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
-          <div class="carousel-caption" style="color: black;">
-            <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
-            <p><%= galery.location%></p>
-          </div>
-        </div>
-        <%end%>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </div>
+     <% content_for :meta_title, "All Galeries" %>
+     <div class="navbar nav navbar-expand-sm navbar-light navbar-lewagon">
+       <div class="nav-item">
+         <ul class="navbar-nav ml-auto">
+           <li><%= link_to "Home", root_path, class: "nav-link", style: "text-decoration: none; color: gray;"   %></li>
+           <li> <%= link_to "Back", galeries_path, :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
+         </ul>
+       </div>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+
+       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+         <ul class="navbar-nav mr-auto">
+           <% if user_signed_in? %>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your galleries </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <% current_user.galeries.each do |gallery| %>
+               <%= link_to gallery.name, gallery, class: "dropdown-item" %>
+               <% end %>
+             </div>
+           </li>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your exhibitions </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <% current_user.galeries.each do |gallery| %>
+               <% gallery.exhibitions.each do |exhibition| %>
+               <% if current_user.eql?(exhibition.galery.user) %>
+               <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
+               <% end %>
+               <%end%>
+               <%end%>
+             </div>
+           </li>
+           <li class="nav-item dropdown">
+             <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Menu </span>
+             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+               <%= link_to "Create a Gallery", new_galery_path, class: "dropdown-item" %>
+               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+               <% else %>
+               <%= link_to "Login", new_user_session_path, class: "dropdown-item" %>
+               <% end %>
+             </div>
+           </li>
+         </ul>
+       </div>
+     </div>
+     <div class="container" style="margin-top:20px;">
+       <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
+         <ol class="carousel-indicators">
+           <% @galeries.each do |galery| %>
+           <% if galery.eql?(@galeries.first) %>
+           <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%> class="active"></li>
+           <% else %>
+           <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%>></li>
+           <%end%>
+           <%end%>
+         </ol>
+         <div class="carousel-inner">
+           <% @galeries.each do |galery| %>
+           <% if galery.eql?(@galeries.first)%>
+           <div class="carousel-item active">
+             <%else%>
+             <div class="carousel-item">
+               <%end%>
+               <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
+               <div class="carousel-caption" style="color: black;">
+                 <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
+                 <p><%= galery.location%></p>
+               </div>
+             </div>
+             <%end%>
+           </div>
+           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+             <span class="sr-only">Previous</span>
+           </a>
+           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="sr-only">Next</span>
+           </a>
+         </div>
+       </div>
