--- a/app/views/art_pieces/show.html.erb
+++ b/app/views/art_pieces/show.html.erb
@@ -50,10 +50,12 @@
 </div>
 <div class="container">
   <h1><%= @art_piece.name %> </h1>
-  <div class="card text-center p-3 mb-2">
+  <div class="card text-center p-2 mb-1" style="margin-top:20px">
     <%= @art_piece.description %>
   </div>
-  <div class="row" style="margin-top:10px;">
-    <%= cl_image_tag @art_piece.photo.key , class: "d-block  mx-auto", style: "left: auto;right: auto; width:800px;" %>
+  <div class="container" style="margin-top:20px;">
+    <div class="row">
+      <%= cl_image_tag @art_piece.photo.key , class: "d-block  mx-auto", style: "left: auto;right: auto; width:800px;" %>
+    </div>
   </div>
 </div>
