--- a/app/views/exhibitions/art_pieces/new.html.erb
+++ b/app/views/exhibitions/art_pieces/new.html.erb
@@ -46,15 +46,17 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center">
+  <div class="card text-center p-2 mb-1" style="margin-top:20px">
     <h4> New Piece </h4>
   </div>
-  <%= simple_form_for(@art_piece, url: exhibition_art_pieces_path , method: :post) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :dimension %>
-  <%= f.input :photo %>
-  <%= f.submit "Add", class: 'btn btn-light' %>
-  <%= link_to "Back", exhibition_path(@exhibition), class: 'btn btn-light'%>
-  <%end%>
+  <div class="container" style="margin-top:20px;">
+    <%= simple_form_for(@art_piece, url: exhibition_art_pieces_path , method: :post) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :description %>
+    <%= f.input :dimension %>
+    <%= f.input :photo %>
+    <%= f.submit "Add", class: 'btn btn-light' %>
+    <%= link_to "Back", exhibition_path(@exhibition), class: 'btn btn-light'%>
+    <%end%>
+  </div>
 </div>
