--- a/app/views/exhibitions/edit.html.erb
+++ b/app/views/exhibitions/edit.html.erb
@@ -46,16 +46,18 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center">
+  <div class="card text-center p-2 mb-1" style="margin-top:20px">
     <h4>Edit Exhibition</h4>
   </div>
-  <%= simple_form_for @exhibition do |f| %>
-  <%= f.input :name %>
-  <%= f.input :artist %>
-  <%= f.input :video %>
-  <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.submit 'Edit', class: 'btn btn-light' %>
-  <%= link_to "Back", exhibition_path(@exhibition), class: 'btn btn-light' %>
-  <%end%>
+  <div class="container" style="margin-top:20px;">
+    <%= simple_form_for @exhibition do |f| %>
+    <%= f.input :name %>
+    <%= f.input :artist %>
+    <%= f.input :video %>
+    <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.submit 'Edit', class: 'btn btn-light' %>
+    <%= link_to "Back", exhibition_path(@exhibition), class: 'btn btn-light' %>
+    <%end%>
+  </div>
 </div>
