--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -48,58 +48,56 @@
     </ul>
   </div>
 </div>
-<div class="container">
-  <div class="row" style="margin-top:10px;">
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-5 col-lg-5">
-        <br>
-        <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
-        <span class="exhibition_title work_block_data_line_height">
-          <%= @exhibition.name %> </span><br>
-        <span class="date work_block_data_line_height">
-          <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
-        <span class="date work_block_data_line_height">
-          <%= @exhibition.galery.location %> </span> <br>
-        <br>
-        <br>
-        <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
-        <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
-        <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Video" %><br>
-        <br>
-        <br>
-        <p>We invite you to experience our new online "<%= link_to "Show room", "#", class: "btn btn-light btn-sm"%>" for an immersive visit of this exhibition.</p>
-      </div>
-      <div class="col-12 col-sm-12 col-md-7 col-lg-7">
-        <div class="text-center" style="margin-top: 5px;">
-          <div id="myCarousel" class="carousel slide" data-interval="false">
-            <div class="carousel-inner center">
-              <% @exhibition.art_pieces.each do |art_piece| %>
-              <% if art_piece.eql?(@exhibition.art_pieces.first) %>
-              <div class="carousel-item  active ">
-                <% else %>
-                <div class="carousel-item ">
-                  <%end%>
-                  <div class="text-center" style="width: 100%;">
-                    <%=link_to( cl_image_tag(art_piece.photo.key, class: "d-block  mx-auto", style: "left: auto;right: auto; height:400px;" ), art_piece_path(art_piece) ) %>
-                    <div class="carousel-caption-exhibition"> <span class="exhibition_title">
-                        <%= art_piece.name %></span><br>
-                      <span class="date">
-                        <%= art_piece.description %><br>
-                        <%= art_piece.dimension %><br>
-                      </span></div>
-                  </div>
-                </div>
+<div class="container" style="margin-top:20px;">
+  <div class="row">
+    <div class="col-12 col-sm-6 col-md-5 col-lg-5">
+      <br>
+      <p class="exhibition_artistname exhibition_work_block_data_line_height"><%= @exhibition.artist %></p><br>
+      <span class="exhibition_title work_block_data_line_height">
+        <%= @exhibition.name %> </span><br>
+      <span class="date work_block_data_line_height">
+        <%= @exhibition.start_date %> to <%= @exhibition.end_date %> </span><br>
+      <span class="date work_block_data_line_height">
+        <%= @exhibition.galery.location %> </span> <br>
+      <br>
+      <br>
+      <%= link_to  "Want to buy ?", exhibition_art_pieces_path(@exhibition) , :class => "expoDetailMenu text-light bg-dark nounderline", :title => "Selected works" %><br>
+      <%= link_to  "Press release", "#" , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Press release" %><br>
+      <%= link_to  "Video", video_path(@exhibition) , :class => "expoDetailMenu  active text-light bg-dark nounderline", :title => "Video" %><br>
+      <br>
+      <br>
+      <p>We invite you to experience our new online "<%= link_to "Show room", "#", class: "btn btn-light btn-sm"%>" for an immersive visit of this exhibition.</p>
+    </div>
+    <div class="col-12 col-sm-12 col-md-7 col-lg-7">
+      <div class="text-center" style="margin-top: 30px;">
+        <div id="myCarousel" class="carousel slide" data-interval="false">
+          <div class="carousel-inner center">
+            <% @exhibition.art_pieces.each do |art_piece| %>
+            <% if art_piece.eql?(@exhibition.art_pieces.first) %>
+            <div class="carousel-item  active ">
+              <% else %>
+              <div class="carousel-item ">
                 <%end%>
+                <div class="text-center">
+                  <%=link_to( cl_image_tag(art_piece.photo.key, class: "d-block  mx-auto", style: "left: auto;right: auto; height:400px; max-width:400px" ), art_piece_path(art_piece) ) %>
+                  <div class="carousel-caption-exhibition"> <span class="exhibition_title">
+                      <%= art_piece.name %></span><br>
+                    <span class="date">
+                      <%= art_piece.description %><br>
+                      <%= art_piece.dimension %><br>
+                    </span></div>
+                </div>
               </div>
-              <% if @exhibition.art_pieces.first %>
-              <a class="carousel-control-prev" href="#myCarousel" data-slide="prev" id="carousel-control-prev-ex">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              </a>
-              <a class="carousel-control-next" href="#myCarousel" data-slide="next" id="carousel-control-next-ex">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              </a>
               <%end%>
             </div>
+            <% if @exhibition.art_pieces.first %>
+            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev" id="carousel-control-prev-ex">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-slide="next" id="carousel-control-next-ex">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
+            <%end%>
           </div>
         </div>
       </div>
