--- a/app/views/galeries/exhibitions/new.html.erb
+++ b/app/views/galeries/exhibitions/new.html.erb
@@ -46,16 +46,18 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center">
+  <div class="card text-center p-2 mb-1" style="margin-top:20px;">
     <h4> New Exhibition </h4>
   </div>
-  <%= simple_form_for(@exhibition, url: galery_exhibitions_path, method: :post) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :artist %>
-  <%= f.input :video %>
-  <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  <%= f.submit 'Add', class: 'btn btn-light' %>
-  <%= link_to "Back", galery_path(@galery), class: 'btn btn-light' %>
-  <%end%>
+  <div class="container" style="margin-top:20px;">
+    <%= simple_form_for(@exhibition, url: galery_exhibitions_path, method: :post) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :artist %>
+    <%= f.input :video %>
+    <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.submit 'Add', class: 'btn btn-light' %>
+    <%= link_to "Back", galery_path(@galery), class: 'btn btn-light' %>
+    <%end%>
+  </div>
 </div>
