--- a/app/views/exhibitions/video.html.erb
+++ b/app/views/exhibitions/video.html.erb
@@ -23,19 +23,15 @@
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your exhibitions </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% current_user.galeries.each do |gallery| %>
-          <% gallery.exhibitions.each do |exhibition| %>
-          <% if current_user.eql?(exhibition.galery.user) %>
+          <% current_user.exhibitions.each do |exhibition| %>
           <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
-          <% end %>
-          <%end%>
           <%end%>
         </div>
       </li>
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Menu </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% if current_user.eql?(@exhibition.galery.user) %>
+          <% if current_user.eql?(@exhibition.user) %>
           <%= link_to  "Add Piece", new_exhibition_art_piece_path(@exhibition) , :class => "dropdown-item" %>
           <%= link_to  "Edit Exhibition", edit_exhibition_path(@exhibition) , :class => "dropdown-item" %>
           <%end%>
