--- a/app/views/galeries/exhibitions/new.html.erb
+++ b/app/views/galeries/exhibitions/new.html.erb
@@ -23,12 +23,8 @@
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your exhibitions </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% current_user.galeries.each do |gallery| %>
-          <% gallery.exhibitions.each do |exhibition| %>
-          <% if current_user.eql?(exhibition.galery.user) %>
+          <% current_user.exhibitions.each do |exhibition| %>
           <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
-          <% end %>
-          <%end%>
           <%end%>
         </div>
       </li>
@@ -54,6 +50,7 @@
     <%= f.input :name %>
     <%= f.input :artist %>
     <%= f.input :video %>
+    <%= f.input :photo, as: :file %>
     <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
     <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
     <%= f.submit 'Add', class: 'btn btn-light' %>
