--- a/app/views/galeries/show.html.erb
+++ b/app/views/galeries/show.html.erb
@@ -23,13 +23,9 @@
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Your exhibitions </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% current_user.galeries.each do |gallery| %>
-          <% gallery.exhibitions.each do |exhibition| %>
-          <% if current_user.eql?(exhibition.galery.user) %>
+          <% current_user.exhibitions.each do |exhibition| %>
           <%= link_to exhibition.name, exhibition, class: "dropdown-item" %>
           <% end %>
-          <%end%>
-          <%end%>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -61,7 +57,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="text-center">
-              <%=link_to( cl_image_tag(exhibition.art_pieces.last.photo.key, class: "img-fluid", style: "height:400px;"), exhibition_path(exhibition) )%>
+              <%=link_to( cl_image_tag(exhibition.photo.key, class: "img-fluid", style: "max-height:400px; max-witdh:500px"), exhibition_path(exhibition) )%>
             </div>
             <div class="text-center galerie_templon_work_block_data">
               <span class="exhibition_artistname exhibition_work_block_data_line_height"><%= exhibition.artist %></span><br>
