--- a/app/views/exhibitions/art_pieces/index.html.erb
+++ b/app/views/exhibitions/art_pieces/index.html.erb
@@ -1,9 +1,9 @@
-<% content_for :meta_title, @art_pieces.first.exhibition.name %>
+<% content_for :meta_title, @exhibition.name %>
 <div class="navbar nav navbar-expand-sm navbar-light navbar-lewagon">
   <div class="nav-item">
     <ul class="navbar-nav ml-auto">
       <li><%= link_to "Home", root_path, class: "nav-link", style: "text-decoration: none; color: gray;"   %></li>
-      <li> <%= link_to "Back", exhibition_path(@art_pieces.first.exhibition) , :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
+      <li> <%= link_to "Back", exhibition_path(@exhibition) , :class => "nav-link", style: "text-decoration: none; color: gray;"%></li>
     </ul>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,8 +31,8 @@
       <li class="nav-item dropdown">
         <span class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" data-toggle="aria-haspopup" data-aria-expanded='false'> Menu </span>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <% if current_user.eql?(@art_pieces.first.user) %>
-          <%= link_to "Add piece", new_exhibition_art_piece_path(@art_pieces.first.exhibition), class: "dropdown-item" %>
+          <% if current_user.eql?(@exhibition.user) %>
+          <%= link_to "Add piece", new_exhibition_art_piece_path(@exhibition), class: "dropdown-item" %>
           <%end%>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           <% else %>
@@ -45,8 +45,8 @@
 </div>
 <div class="container">
   <div class="card text-center p-2 mb-1" style="margin-top:20px">
-    <h1><%= @art_pieces.first.exhibition.name %> </h1>
-    <h6><%= @art_pieces.first.exhibition.start_date %> to <%= @art_pieces.first.exhibition.end_date %></h6>
+    <h1><%= @exhibition.name %> </h1>
+    <h6><%= @exhibition.start_date %> to <%= @exhibition.end_date %></h6>
   </div>
   <div class="container" style="margin-top:20px;">
     <div class="artworks-list">
