--- a/app/views/art_pieces/edit.html.erb
+++ b/app/views/art_pieces/edit.html.erb
@@ -42,7 +42,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center p-2 mb-1" style="margin-top:20px">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
     <h4> Edit Piece </h4>
   </div>
   <div class="container" style="margin-top:20px;">
