--- a/app/views/exhibitions/art_pieces/index.html.erb
+++ b/app/views/exhibitions/art_pieces/index.html.erb
@@ -44,7 +44,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center p-2 mb-1" style="margin-top:20px">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
     <h1><%= @exhibition.name %> </h1>
     <h6><%= @exhibition.start_date %> to <%= @exhibition.end_date %></h6>
   </div>
