--- a/app/views/exhibitions/showrooms/new.html.erb
+++ b/app/views/exhibitions/showrooms/new.html.erb
@@ -43,7 +43,7 @@
 </div>
 
 <div class="container">
-  <div class="card text-center p-2 mb-1" style="margin-top:20px">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
     <h4> New Showroom </h4>
   </div>
   <div class="container" style="margin-top:20px;">
