--- a/app/views/art_pieces/show.html.erb
+++ b/app/views/art_pieces/show.html.erb
@@ -45,8 +45,9 @@
   </div>
 </div>
 <div class="container">
-  <h1><%= @art_piece.name %> </h1>
-  <div class="card text-center p-2 mb-1" style="margin-top:20px">
+
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h4><%= @art_piece.name %> </h4>
     <%= @art_piece.description %>
   </div>
   <div class="container" style="margin-top:20px;">
