--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -41,40 +41,45 @@
     </ul>
   </div>
 </div>
-<div class="container" style="margin-top:20px;">
-  <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <% @galeries.each do |galery| %>
-      <% if galery.eql?(@galeries.first) %>
-      <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%> class="active"></li>
-      <% else %>
-      <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%>></li>
-      <%end%>
-      <%end%>
-    </ol>
-    <div class="carousel-inner">
-      <% @galeries.each do |galery| %>
-      <% if galery.eql?(@galeries.first)%>
-      <div class="carousel-item active">
-        <%else%>
-        <div class="carousel-item">
-          <%end%>
-          <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
-          <div class="carousel-caption" style="color: black;">
-            <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
-            <p><%= galery.location%></p>
-          </div>
-        </div>
+<div class="container">
+  <div class="card-title text-center p-2 mb-1" style="margin-top:20px">
+    <h4> GALERIES </h4>
+  </div>
+  <div class="container" style="margin-top:20px;">
+    <div id="carouselExampleIndicators" class="h-100 carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <% @galeries.each do |galery| %>
+        <% if galery.eql?(@galeries.first) %>
+        <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%> class="active"></li>
+        <% else %>
+        <li data-target="#carouselExampleIndicators" data-slide-to=<%="#{galery.id}"%>></li>
         <%end%>
+        <%end%>
+      </ol>
+      <div class="carousel-inner">
+        <% @galeries.each do |galery| %>
+        <% if galery.eql?(@galeries.first)%>
+        <div class="carousel-item active">
+          <%else%>
+          <div class="carousel-item">
+            <%end%>
+            <%= cl_image_tag galery.photo.key, class: "d-block w-100", alt: galery.name %>
+            <div class="carousel-caption" style="color: black;">
+              <%= link_to  "#{galery.name}", galery_path(galery), class: "btn btn-outline-dark text-white" %>
+              <p><%= galery.location%></p>
+            </div>
+          </div>
+          <%end%>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
   </div>
 </div>
