--- a/app/views/galeries/index.html.erb
+++ b/app/views/galeries/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "All Galeries" %>
+<% content_for :meta_title, "Art Galeries" %>
 <div class="navbar nav navbar-expand-sm navbar-light navbar-lewagon">
   <div class="nav-item">
     <ul class="navbar-nav ml-auto">
